# OpenTransportMap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/transport_posters/: load_configs.py  logger.py  main.py
src/transport_posters/data_map/: get_data_map.py  get_layers.py  get_style_layers.py  main.py
src/transport_posters/data_transport/: README.md  build_edges.py  cache.py  get_bus_layers.py  main.py  overpass_query.py  parser.py  parser_osm.py  сity_route_database.py
src/transport_posters/generate_maps/: generate_maps.py
src/transport_posters/generate_three_in_one/: compose_img_to_poster.py  generate_three_in_one.py  render_detailed_map.py  render_far_plan.py  render_middle_transit_map.py
src/transport_posters/render_map/: render_basemap.py  render_labels_for_layers.py  render_labels_lines.py  render_labels_points_polygons.py  render_walk_access.py  utils_text_label.py
src/transport_posters/render_pictographs/: README.md  render_pictographs.py
src/transport_posters/render_transport/: README.md  render_bus_lines.py  render_bus_lines_v2.py  render_stop_point.py  render_stop_point_v2.py  render_stops.py  stop_layout_opt.py
src/transport_posters/utils/: forbidden.py  util_short_name.py  utils.py  utils_generate.py  utils_projection.py  utils_rendering.py
style/: detailed_city_layers.json  detailed_city_layers_small.json  detailed_city_layers_v2.json  far_city_layers_labeled.json  general_city_layers.json  general_city_layers_small.json
style/pictographs/: far_vologda_pictographs.csv  vologda_pictographs.csv  vologda_pictographs_all.csv
