[tool.poetry]
name = "OpenTransportMap"
version = "0.1.0"
description = "GeoTransportMap is a Python toolkit that builds high-quality transit posters for city bus stops. It pulls base layers from OpenStreetMap, loads your local route/stop layers, then renders a clear, print-ready map (PNG by default) with sensible labeling, route styling, and light theme."
authors = []
readme = "README.md"
license = "MIT"
keywords = ["maps", "cartography", "osm", "transport", "poster", "geopandas", "bus", "tram"]
packages = [
  { include = "transport_posters", from = "src" }
]

[tool.poetry.scripts]
transport-posters = "transport_posters.main:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

absl-py = "2.3.1"
adjustText = "1.3.0"
affine = "2.4.0"
anyio = "4.10.0"
attrs = "25.3.0"
branca = "0.8.1"
build = "1.3.0"
CacheControl = "0.14.3"
cairocffi = "1.7.1"
CairoSVG = "2.8.2"
certifi = "2025.7.14"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
cleo = "2.1.0"
click = "8.2.1"
click-plugins = "1.1.1.2"
cligj = "0.7.2"
colorama = "0.4.6"
contextily = "1.6.2"
contourpy = "1.3.2"
crashtest = "0.4.1"
cssselect2 = "0.8.0"
cycler = "0.12.1"
defusedxml = "0.7.1"
distlib = "0.4.0"
dulwich = "0.24.1"
fastjsonschema = "2.21.2"
filelock = "3.19.1"
findpython = "0.7.0"
Fiona = "1.10.1"
folium = "0.20.0"
fonttools = "4.59.0"
geographiclib = "2.0"
geopandas = "1.1.1"
geopy = "2.4.1"
geotiler = "0.14.6"
h11 = "0.16.0"
haversine = "2.8.1"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
imageio = "2.37.0"
immutabledict = "4.2.1"
installer = "0.7.0"
"jaraco.classes" = "3.4.0"
"jaraco.context" = "6.0.1"
"jaraco.functools" = "4.3.0"
Jinja2 = "3.1.6"
joblib = "1.5.1"
keyring = "25.6.0"
kiwisolver = "1.4.8"
langdetect = "1.0.9"
lingua-language-detector = "2.1.1"
mapclassify = "2.8.1"
MarkupSafe = "3.0.2"
matplotlib = "3.10.3"
matplotlib-scalebar = "0.9.0"
mercantile = "1.2.1"
more-itertools = "10.8.0"
msgpack = "1.1.1"
networkx = "3.5"
numpy = "2.3.1"
ortools = "9.14.6206"
osmnx = "2.0.5"
packaging = "25.0"
pandas = "2.3.1"
parquet = "1.3.1"
pbs-installer = "2025.9.2"
pillow = "11.3.0"
pkginfo = "1.12.1.2"
platformdirs = "4.4.0"
ply = "3.11"
poetry = "2.2.0"
poetry-core = "2.2.0"
protobuf = "6.31.1"
pyarrow = "21.0.0"
pycparser = "2.22"
pyogrio = "0.11.0"
pyparsing = "3.2.3"
pyproj = "3.7.1"
pyproject_hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
pywin32-ctypes = "0.2.3"
PyYAML = "6.0.2"
qrcode = "8.2"
RapidFuzz = "3.14.1"
rasterio = "1.4.3"
ratelimit = "2.2.1"
reportlab = "4.4.3"
requests = "2.32.4"
requests-toolbelt = "1.0.0"
Rtree = "1.4.1"
scikit-learn = "1.7.2"
scipy = "1.16.2"
seaborn = "0.13.2"
Shapely = "2.1.1"
shellingham = "1.5.4"
six = "1.17.0"
snakeviz = "2.2.2"
sniffio = "1.3.1"
svgwrite = "1.4.3"
threadpoolctl = "3.6.0"
thriftpy2 = "0.5.3"
tinycss2 = "1.4.0"
tomlkit = "0.13.3"
tornado = "6.5.2"
tqdm = "4.67.1"
trove-classifiers = "2025.9.11.17"
typing_extensions = "4.14.1"
tzdata = "2025.2"
Unidecode = "1.4.0"
urllib3 = "2.5.0"
virtualenv = "20.34.0"
webencodings = "0.5.1"
xyzservices = "2025.4.0"
zstandard = "0.25.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
